Avoid display overflow in share header & display only file name

--- a/src/pydio/ui/res/bootstrap/css/pydio.css
+++ b/src/pydio/ui/res/bootstrap/css/pydio.css
@@ -144,6 +144,9 @@ div.loader_image{
     top: 34px;
     z-index: 1000;
     font-size: 28px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .settingsHeader{
